# messages_microservice

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-09-05-161838_create_messages/: up.sql
src/: main.rs  models.rs  schema.rs
src/model/: mod.rs
src/schemas/: message.sql
