[package]
name = "messages_microservice"
version = "0.1.0"
edition = "2021"
authors = ["yurash862@gmail.com"]

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
serde_json = "1.0.127"
serde_derive = "1.0.209"
url = "2.5.2"
diesel = { version = "2.2.3", features = ["postgres"] }
maud = "0.26.0"
